Revision history for Perl extension App::Followme

{{$NEXT}}

0.79 2013-08-26T22:16:58Z
    - Removed compile test

0.78 2013-08-17T20:28:34Z
    - Changed begin/end comments to section/endsection
    
0.77 2013-08-17T15:19:16Z
    - fixed time zone depndent test
    - added new blocks to templates

0.76 2013-08-16T22:23:24Z
    - feature complete release